<resources>
    <string name="app_name">Aale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>

    <string name="sign_up">SIGN UP</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_users">Users</string>
    <string name="menu_swipes">Swipes</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_push_notifications">Push Notifications</string>
    <string name="menu_advertisements">Advertisements</string>
    <string name="menu_e_mail">E-Mail</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="prompt_username">User Name</string>
    <string name="users">Users</string>
    <string name="add_users">Add Users</string>
    <string name="user_col1">User Name</string>
    <string name="user_col2">Mobile No:</string>
    <string name="user_col3">E-mail</string>
    <string name="user_col4">Gender</string>
    <string name="user_col5">Photos</string>
    <string name="user_col6">Actions</string>
    <string name="user_type">User Type</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="edit_user">Edit User</string>
    <string name="user_email">User Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="add_admin">Add Admin</string>
    <string name="semd_email">Send Email</string>
    <string name="sender_email">Sender Email</string>
    <string name="receiver_email">Receiver Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>

    <string name="name">text1</string>
    <string name="tp">Telephone No.</string>
    <string name="personname">pn1</string>
    <string name="personphone">pphone</string>
    <string name="personmail">pmail</string>
    <string name="personaddress">paddress</string>
    <string name="conscent">conscent</string>
    <string name="c1">c1</string>
    <string name="c2">conscent2</string>
    <string name="c3">conscent3</string>
    <string name="c4">conscent4</string>
    <string name="text01">txt1</string>
    <string name="text02">txt2</string>
    <string name="text03">txt3</string>
    <string name="text04">txt4</string>
    <string name="agreebtn">agree</string>
    <string name="backbtn">back</string>

    <string name="User_logout">Log Out</string>
    <string name="user_profile">User Profile Activity</string>


    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="swipee_author">Author</string>
    <string name="swipe_author">Author</string>
    <string name="swipe_seen">Seen</string>
    <string name="swipe_type">Type</string>
    <string name="swipe_date">Date</string>
    <string name="swipe_profile_swiped">Profile Swiped</string>
    <string name="swipe_actions">Actions</string>
    <string name="textviewdfsdfdfsdf">TextViewdfsdfdfsdf</string>
    <!-- TODO: Remove or change this placeholder text -->

	

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_ad_id">AdID</string>
    <string name="insert_ad_title">Ad Title</string>
    <string name="insert_company">Company Name</string>
    <string name="insert_description">Description</string>
    <string name="add_new_ad_btn2">Add New AD</string>
    <string name="add_new_ad_btn3">Create Ad</string>
    <string name="insert_ad_id1">AdID</string>
    <string name="insert_ad_title1">Ad Title</string>
    <string name="insert_company1">Company Name</string>
    <string name="select_cat1">Category</string>
    <string name="insert_des1">Description</string>
    <string name="choose_img_btn1">Choose Image</string>
    <string name="create_ad_btn1">Create Ad</string>
    <string name="add_new_ad_text">Advertisement Handling</string>
    <string name="add_new_ad_btn">Add New Ad</string>
    <string name="action_col6">Actions</string>
    <string name="ad_pic_col5">Picture</string>
    <string name="company_col4">Company</string>
    <string name="category_col3">Category</string>
    <string name="ad_title_col2">Ad Title</string>
    <string name="ad_id_col1">AdID</string>
    <string name="push">Push Notification</string>
    <string name="add_new_user">Add New User</string>
    <string name="f_name_col1">First Name</string>
    <string name="company_col2">Last Name</string>
    <string name="l_name_col2">Last Name</string>
    <string name="mail_col3">Email</string>
    <string name="user_pic_col4">Picture</string>
    <string name="col5_actions">Action</string>
    <string name="ad_send_all1">Send to All</string>
    <string name="add_new_ad">Add New Add</string>
	
</resources>