<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

<!--        -->
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_swipes"
            android:icon="@drawable/ic_menu_swipes"
            android:title="@string/menu_swipes" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_push_notifications"
            android:icon="@drawable/ic_menu_push_notifications"
            android:title="@string/menu_push_notifications" />
        <item
            android:id="@+id/nav_publish_advertisements"
            android:icon="@drawable/ic_menu_advertisements"
            android:title="@string/menu_advertisements" />
        <item
            android:id="@+id/nav_e_mail"
            android:icon="@drawable/ic_menu_email"
            android:title="@string/menu_e_mail" />



    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/menu_logout" />
</menu>