<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.UsersFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="627dp"
        android:layout_height="310dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/users"
                android:layout_width="119dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/users"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_user"
                android:layout_width="129dp"
                android:layout_height="47dp"
                android:layout_above="@+id/table_scroll"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="366dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/users"
                android:backgroundTint="@color/red"
                android:enabled="true"
                android:gravity="end"

                android:text="@string/add_users"
                android:textColor="#ffffff"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ScrollView
                android:id="@+id/table_scroll"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_below="@+id/users"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp">

                <TableLayout
                    android:id="@+id/table_user"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:layout_below="@+id/users"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"

                    android:layout_marginBottom="0dp">

                    <TableRow
                        android:id="@+id/table_header"
                        android:layout_height="34dp"
                        android:background="@drawable/table_border">

                        <TextView
                            android:id="@+id/h_one"
                            android:layout_width="71dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/user_col1"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="77dp"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/user_col2"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="198dp"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/user_col3"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="85dp"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/user_col4"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="197dp"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/user_col6"
                            android:textColor="@color/black"

                            android:textSize="10sp" />


                    </TableRow>
                </TableLayout>


            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>